fix visible problem

--- a/data_structure/general.css
+++ b/data_structure/general.css
@@ -259,6 +259,3 @@ span.name{
     width: 70px;
     height: 70px;
 }
-svg{
-    overflow: visible;
-}
